@@ -1,4 +1,4 @@
-# $Cambridge: exim/src/src/auths/Makefile,v 1.2 2005/05/17 09:53:34 ph10 Exp $
+# $Cambridge: exim/src/src/auths/Makefile,v 1.3 2005/09/12 13:50:03 ph10 Exp $
 
 # Make file for building a library containing all the available authorization
 # methods, and calling it auths.a. In addition, there are functions that are
@@ -12,11 +12,11 @@ OBJ = b64encode.o b64decode.o call_pam.o call_pwcheck.o call_radius.o \
       cram_md5.o cyrus_sasl.o plaintext.o pwcheck.o sha1.o auth-spa.o spa.o
 
 auths.a:         $(OBJ)
-		 @/bin/rm -f auths.a
+		 @$(RM_COMMAND) -f auths.a
 		 @echo "$(AR) auths.a"
 		 $(FE)$(AR) auths.a $(OBJ)
 		 $(RANLIB) $@
-		 @/bin/rm -rf ../drtables.o
+		 @$(RM_COMMAND) -rf ../drtables.o
 
 .SUFFIXES:       .o .c
 .c.o:;           @echo "$(CC) $*.c"
